--- a/ansible/templates/secrets.php.j2
+++ b/ansible/templates/secrets.php.j2
@@ -6,6 +6,6 @@ $mysql_pass = '{{ mysql_webapp_password }}';
 
 if ($mysql_pass == 'PLEASE_EDIT_THE_PASSWORD_7672596721') die('You forgot to change the default password');
 
-// Change these
+// Generate a 32 length random string
 $application_secret = "{{ webapp_app_key }}";
 ?>
