--- a/ansible/templates/nginx_default_site.j2
+++ b/ansible/templates/nginx_default_site.j2
@@ -26,4 +26,41 @@ server {
         location ~ /errors {
                 deny  all;
         }
+
+        gzip on;
+        gzip_comp_level    5;
+        gzip_min_length    256;
+        gzip_proxied       any;
+        gzip_vary          on;
+
+        gzip_types
+        application/atom+xml
+        application/javascript
+        application/json
+        application/ld+json
+        application/manifest+json
+        application/rss+xml
+        application/vnd.geo+json
+        application/vnd.ms-fontobject
+        application/x-font-ttf
+        application/x-web-app-manifest+json
+        application/xhtml+xml
+        application/xml
+        font/opentype
+        image/bmp
+        image/svg+xml
+        image/x-icon
+        text/cache-manifest
+        text/css
+        text/plain
+        text/vcard
+        text/vnd.rim.location.xloc
+        text/vtt
+        text/x-component
+        text/x-cross-domain-policy;
+        # text/html is always compressed by gzip module
+
+        location ~*  \.(jpg|jpeg|png|gif|ico|css|js)$ {
+            expires 7d;
+        }
 }
