Stop snow after a while

--- a/webapp/styles/default.css
+++ b/webapp/styles/default.css
@@ -2833,3 +2833,10 @@ InternetMusicDb.md
   color: green;
   font-weight: bold;
 }
+
+.snow_flake {
+   transition: opacity 1s ease-in-out;
+   -moz-transition: opacity 1s ease-in-out;
+   -webkit-transition: opacity 1s ease-in-out;
+}
+}
